<?xml version="1.0"?>
<package>
  <name>tester</name>
  <version>0.0.0</version>
  <description>The tester package</description>

  <maintainer email="m@todo.todo">m</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>kovan</build_depend>
  <run_depend>kovan</run_depend>
</package>
